// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My message rows render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingTop": 6,
        },
        Object {
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Array [
              Object {
                "textAlign": "right",
              },
              Object {
                "fontSize": 16,
              },
            ],
          ]
        }
      >
        Higgs Boson
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#7F91A7",
              "fontSize": 16,
              "lineHeight": 23,
            },
            Array [
              Object {
                "textAlign": "right",
              },
              Object {
                "fontSize": 12,
                "lineHeight": undefined,
              },
            ],
          ]
        }
      >
        Mar 17, 2017 at 1:15 PM
      </Text>
    </View>
    <Avatar
      avatarURL="http://fillmurray.com/200/300"
      onPress={[Function]}
      userName="Higgs Boson"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "paddingTop": 4,
      }
    }
  >
    <View />
    <View
      style={
        Object {
          "flex": 1,
          "maxWidth": 300,
        }
      }
    >
      <Image
        capInsets={
          Object {
            "bottom": 16,
            "left": 18,
            "right": 18,
            "top": 24,
          }
        }
        resizeMode="stretch"
        source={
          Object {
            "testUri": "../../../src/images/speedgrader/bubble-me.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": null,
            "left": 0,
            "margin": 0,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": -4,
            "width": null,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "paddingBottom": 8,
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "color": "white",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        You're too late!
      </Text>
    </View>
  </View>
</View>
`;

exports[`Their message rows render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingTop": 6,
        },
        Object {
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <Avatar
      avatarURL="http://fillmurray.com/200/300"
      onPress={[Function]}
      userName="Higgs Boson"
    />
    <View
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 16,
              },
            ],
          ]
        }
      >
        Higgs Boson
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#7F91A7",
              "fontSize": 16,
              "lineHeight": 23,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 12,
                "lineHeight": undefined,
              },
            ],
          ]
        }
      >
        Mar 17, 2017 at 1:15 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "paddingTop": 4,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "maxWidth": 300,
        }
      }
    >
      <Image
        capInsets={
          Object {
            "bottom": 16,
            "left": 18,
            "right": 18,
            "top": 24,
          }
        }
        resizeMode="stretch"
        source={
          Object {
            "testUri": "../../../src/images/speedgrader/bubble-them.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": null,
            "left": 0,
            "margin": 0,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": -4,
            "width": null,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "paddingBottom": 8,
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "color": "#2D3B45",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        I just need more time!?
      </Text>
    </View>
  </View>
</View>
`;

exports[`their submissions render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingTop": 6,
        },
        Object {
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <Avatar
      avatarURL="http://fillmurray.com/200/300"
      onPress={[Function]}
      userName="Higgs Boson"
    />
    <View
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 16,
              },
            ],
          ]
        }
      >
        Higgs Boson
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#7F91A7",
              "fontSize": 16,
              "lineHeight": 23,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 12,
                "lineHeight": undefined,
              },
            ],
          ]
        }
      >
        Mar 17, 2017 at 1:15 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "paddingTop": 4,
      }
    }
  />
</View>
`;

exports[`video comments without url render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingTop": 6,
        },
        Object {
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <Avatar
      avatarURL="http://fillmurray.com/200/300"
      onPress={[Function]}
      userName="Higgs Boson"
    />
    <View
      style={
        Object {
          "justifyContent": "center",
          "paddingHorizontal": 8,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 16,
              },
            ],
          ]
        }
      >
        Higgs Boson
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#7F91A7",
              "fontSize": 16,
              "lineHeight": 23,
            },
            Array [
              Object {
                "textAlign": "left",
              },
              Object {
                "fontSize": 12,
                "lineHeight": undefined,
              },
            ],
          ]
        }
      >
        Mar 17, 2017 at 1:15 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "paddingTop": 4,
      }
    }
  />
</View>
`;
